tests/ui/label/continue-pointing-to-block-ice-121623.stderr
error[E0696]: `continue` pointing to a labeled block
  --> $DIR/continue-pointing-to-block-ice-121623.rs:7:13
   |
LL |           _ => 'b: {
   |  ______________-
LL | |             continue 'b;
   | |             ^^^^^^^^^^^ labeled blocks cannot be `continue`'d
LL | |
LL | |         }
   | |_________- labeled block the `continue` points to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0696`.
